[tool.poetry]
name = "project-template.core"
version = "0.0.1"
description = "project-template"
authors = ["project-template"]
readme = "README.md"
license = "MIT"
packages = [{include = "project-template", from = "src"}]

[tool.poetry.dependencies]


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
